--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                         <i class="fa-brands fa-discord"></i>
                     </a>
                 </div>
-                <a href="File/first resume.pdf" download target="_blank" class="btn btn2 downbtn">
+                <a href="File/Muhammed Fahad K P-Resume.pdf" download target="_blank" class="btn btn2 downbtn">
                      Download CV<i class="fa-solid fa-file-arrow-down"></i>
                 </a>
             </div>
